[gd_scene load_steps=54 format=2]

[ext_resource path="res://Fonts/Mundo.tres" type="DynamicFont" id=1]
[ext_resource path="res://Level/Activables/Spawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/Tutorial.gd" type="Script" id=3]
[ext_resource path="res://Level/TileSet.tres" type="TileSet" id=6]
[ext_resource path="res://Fonts/MoonCat.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Map/luces/light.png" type="Texture" id=8]
[ext_resource path="res://Level/Activables/ReboteIzq.gd" type="Script" id=15]
[ext_resource path="res://Level/Menus/IntroLevel.gd" type="Script" id=17]
[ext_resource path="res://Sounds/soundtrack.ogg" type="AudioStream" id=18]
[ext_resource path="res://Assets/Map/activables/piedrasLunares/aguaSpriteSheet.png" type="Texture" id=19]
[ext_resource path="res://Assets/Map/activables/piedrasLunares/fuegoSpriteSheet.png" type="Texture" id=20]
[ext_resource path="res://Assets/Map/activables/piedrasLunares/aireSpriteSheet.png" type="Texture" id=21]
[ext_resource path="res://Assets/Map/activables/piedrasLunares/plantaSpriteSheet.png" type="Texture" id=22]
[ext_resource path="res://Assets/Map/activables/piedrasLunares/fuegoApagadoSpriteSheet.png" type="Texture" id=23]
[ext_resource path="res://Assets/UI/Buttons/botonAceptar.png" type="Texture" id=25]
[ext_resource path="res://Level/Backgrounds/FadeEffect.tscn" type="PackedScene" id=28]
[ext_resource path="res://Level/Backgrounds/TutorialBackground.tscn" type="PackedScene" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.0001, 24 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 2 ), SubResource( 4 ) ],
"loop": true,
"name": "tierraEncendido",
"speed": 6.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 5 ), SubResource( 7 ) ],
"loop": true,
"name": "tierraApagado",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 128, 192 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 128, 0, 128, 192 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 192, 128, 192 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 128, 192, 128, 192 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "aguaApagado",
"speed": 7.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "aguaEncendido",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 164, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 328, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 492, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 164, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 328, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 492, 0, 164, 246 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "fuegoEncendido",
"speed": 8.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "fuegoApagado",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 164, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 328, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 492, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 656, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 820, 246, 164, 246 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 164, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 328, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 492, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 656, 0, 164, 246 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 820, 0, 164, 246 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "aireEncendido",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "aireApagado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 37.5897, 55.2726 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 17 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.635294, 0.690196, 0.827451, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( -43.9639, -1005.76 )
scale = Vector2( 0.524753, 0.348575 )
texture = ExtResource( 8 )
texture_scale = 5.3
color = Color( 0.976471, 0.976471, 0.976471, 1 )
energy = 0.88

[node name="SuelosMagicos" type="Node2D" parent="."]

[node name="CadenasAire" type="Node2D" parent="."]
scale = Vector2( 1.1, 1.1 )

[node name="Troncos" type="Node2D" parent="."]
scale = Vector2( 1.1, 1.1 )

[node name="Rebotes" type="Node2D" parent="."]

[node name="Rebote1" type="Area2D" parent="Rebotes"]
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rebotes/Rebote1"]
position = Vector2( 771.185, -441.192 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( -262100, 9, 0, -262099, 8, 0, -196564, 11, 0, -196563, 7, 0, -131028, 11, 0, -131027, 7, 0, -65492, 11, 0, -65491, 7, 0, 35, 9, 0, 36, 8, 0, 44, 11, 0, 45, 7, 0, 65571, 11, 0, 65572, 7, 0, 65580, 11, 0, 65581, 7, 0, 196595, 6, 0, 196596, 6, 0, 196597, 6, 0, 196598, 6, 0, 196599, 6, 0, 196600, 6, 0, 196601, 6, 0, 196602, 6, 0, 196603, 6, 0, 196604, 6, 0, 196605, 6, 0, 196606, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 131091, 6, 0, 131092, 6, 0, 131093, 6, 0, 131094, 6, 0, 131095, 6, 0, 131096, 6, 0, 131097, 6, 0, 131098, 6, 0, 131099, 6, 0, 131100, 6, 0, 131101, 6, 0, 131102, 6, 0, 131103, 6, 0, 131104, 6, 0, 131105, 6, 0, 131106, 6, 0, 131107, 4, 0, 131108, 4, 0, 131109, 6, 0, 131110, 6, 0, 131111, 6, 0, 131112, 6, 0, 131113, 6, 0, 131114, 6, 0, 131115, 6, 0, 131116, 4, 0, 131117, 4, 0, 131118, 6, 0, 131119, 6, 0, 131120, 6, 0, 131121, 6, 0, 131122, 6, 0, 131123, 6, 0, 131124, 6, 0, 131125, 6, 0, 131126, 6, 0, 131127, 6, 0, 131128, 6, 0, 131129, 6, 0, 131130, 6, 0, 131131, 6, 0, 131132, 6, 0, 131133, 6, 0, 131134, 6, 0, 131135, 6, 0, 131136, 6, 0, 131137, 6, 0, 131138, 6, 0, 131139, 6, 0, 131140, 6, 0, 131141, 6, 0, 131142, 6, 0, 131143, 6, 0, 131144, 6, 0, 131145, 6, 0, 131146, 6, 0, 131147, 6, 0, 131148, 6, 0, 131149, 6, 0, 131150, 6, 0, 131151, 6, 0, 131152, 6, 0, 131153, 6, 0, 131154, 6, 0, 131155, 6, 0, 131156, 6, 0, 131157, 6, 0, 131158, 6, 0, 131159, 6, 0, 131160, 6, 0, 131161, 6, 0, 131162, 6, 0, 131163, 6, 0, 131164, 6, 0, 131165, 6, 0, 131166, 6, 0, 131167, 6, 0, 131168, 6, 0, 262131, 4, 0, 262132, 4, 0, 262133, 4, 0, 262134, 4, 0, 262135, 4, 0, 262136, 4, 0, 262137, 4, 0, 262138, 4, 0, 262139, 4, 0, 262140, 4, 0, 262141, 4, 0, 262142, 4, 0, 262143, 4, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 196634, 4, 0, 196635, 4, 0, 196636, 4, 0, 196637, 4, 0, 196638, 4, 0, 196639, 4, 0, 196640, 4, 0, 196641, 4, 0, 196642, 4, 0, 196643, 4, 0, 196644, 4, 0, 196645, 4, 0, 196646, 4, 0, 196647, 4, 0, 196648, 4, 0, 196649, 4, 0, 196650, 4, 0, 196651, 4, 0, 196652, 4, 0, 196653, 4, 0, 196654, 4, 0, 196655, 4, 0, 196656, 4, 0, 196657, 4, 0, 196658, 4, 0, 196659, 4, 0, 196660, 4, 0, 196661, 4, 0, 196662, 4, 0, 196663, 4, 0, 196664, 4, 0, 196665, 4, 0, 196666, 4, 0, 196667, 4, 0, 196668, 4, 0, 196669, 4, 0, 196670, 4, 0, 196671, 4, 0, 196672, 4, 0, 196673, 4, 0, 196674, 4, 0, 196675, 4, 0, 196676, 4, 0, 196677, 4, 0, 196678, 4, 0, 196679, 4, 0, 196680, 4, 0, 196681, 4, 0, 196682, 4, 0, 196683, 4, 0, 196684, 4, 0, 196685, 4, 0, 196686, 4, 0, 196687, 4, 0, 196688, 4, 0, 196689, 4, 0, 196690, 4, 0, 196691, 4, 0, 196692, 4, 0, 196693, 4, 0, 196694, 4, 0, 196695, 4, 0, 196696, 4, 0, 196697, 4, 0, 196698, 4, 0, 196699, 4, 0, 196700, 4, 0, 196701, 4, 0, 196702, 4, 0, 196703, 4, 0, 196704, 4, 0, 327667, 4, 0, 327668, 4, 0, 327669, 4, 0, 327670, 4, 0, 327671, 4, 0, 327672, 4, 0, 327673, 4, 0, 327674, 4, 0, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 4, 0, 327679, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 4, 0, 262179, 4, 0, 262180, 4, 0, 262181, 4, 0, 262182, 4, 0, 262183, 4, 0, 262184, 4, 0, 262185, 4, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 4, 0, 262192, 4, 0, 262193, 4, 0, 262194, 4, 0, 262195, 4, 0, 262196, 4, 0, 262197, 4, 0, 262198, 4, 0, 262199, 4, 0, 262200, 4, 0, 262201, 4, 0, 262202, 4, 0, 262203, 4, 0, 262204, 4, 0, 262205, 4, 0, 262206, 4, 0, 262207, 4, 0, 262208, 4, 0, 262209, 4, 0, 262210, 4, 0, 262211, 4, 0, 262212, 4, 0, 262213, 4, 0, 262214, 4, 0, 262215, 4, 0, 262216, 4, 0, 262217, 4, 0, 262218, 4, 0, 262219, 4, 0, 262220, 4, 0, 262221, 4, 0, 262222, 4, 0, 262223, 4, 0, 262224, 4, 0, 262225, 4, 0, 262226, 4, 0, 262227, 4, 0, 262228, 4, 0, 262229, 4, 0, 262230, 4, 0, 262231, 4, 0, 262232, 4, 0, 262233, 4, 0, 262234, 4, 0, 262235, 4, 0, 262236, 4, 0, 262237, 4, 0, 262238, 4, 0, 262239, 4, 0, 262240, 4, 0, 393203, 4, 0, 393204, 4, 0, 393205, 4, 0, 393206, 4, 0, 393207, 4, 0, 393208, 4, 0, 393209, 4, 0, 393210, 4, 0, 393211, 4, 0, 393212, 4, 0, 393213, 4, 0, 393214, 4, 0, 393215, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 4, 0, 327702, 4, 0, 327703, 4, 0, 327704, 4, 0, 327705, 4, 0, 327706, 4, 0, 327707, 4, 0, 327708, 4, 0, 327709, 4, 0, 327710, 4, 0, 327711, 4, 0, 327712, 4, 0, 327713, 4, 0, 327714, 4, 0, 327715, 4, 0, 327716, 4, 0, 327717, 4, 0, 327718, 4, 0, 327719, 4, 0, 327720, 4, 0, 327721, 4, 0, 327722, 4, 0, 327723, 4, 0, 327724, 4, 0, 327725, 4, 0, 327726, 4, 0, 327727, 4, 0, 327728, 4, 0, 327729, 4, 0, 327730, 4, 0, 327731, 4, 0, 327732, 4, 0, 327733, 4, 0, 327734, 4, 0, 327735, 4, 0, 327736, 4, 0, 327737, 4, 0, 327738, 4, 0, 327739, 4, 0, 327740, 4, 0, 327741, 4, 0, 327742, 4, 0, 327743, 4, 0, 327744, 4, 0, 327745, 4, 0, 327746, 4, 0, 327747, 4, 0, 327748, 4, 0, 327749, 4, 0, 327750, 4, 0, 327751, 4, 0, 327752, 4, 0, 327753, 4, 0, 327754, 4, 0, 327755, 4, 0, 327756, 4, 0, 327757, 4, 0, 327758, 4, 0, 327759, 4, 0, 327760, 4, 0, 327761, 4, 0, 327762, 4, 0, 327763, 4, 0, 327764, 4, 0, 327765, 4, 0, 327766, 4, 0, 327767, 4, 0, 327768, 4, 0, 327769, 4, 0, 327770, 4, 0, 327771, 4, 0, 327772, 4, 0, 327773, 4, 0, 327774, 4, 0, 327775, 4, 0, 327776, 4, 0, 458739, 4, 0, 458740, 4, 0, 458741, 4, 0, 458742, 4, 0, 458743, 4, 0, 458744, 4, 0, 458745, 4, 0, 458746, 4, 0, 458747, 4, 0, 458748, 4, 0, 458749, 4, 0, 458750, 4, 0, 458751, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 4, 0, 393240, 4, 0, 393241, 4, 0, 393242, 4, 0, 393243, 4, 0, 393244, 4, 0, 393245, 4, 0, 393246, 4, 0, 393247, 4, 0, 393248, 4, 0, 393249, 4, 0, 393250, 4, 0, 393251, 4, 0, 393252, 4, 0, 393253, 4, 0, 393254, 4, 0, 393255, 4, 0, 393256, 4, 0, 393257, 4, 0, 393258, 4, 0, 393259, 4, 0, 393260, 4, 0, 393261, 4, 0, 393262, 4, 0, 393263, 4, 0, 393264, 4, 0, 393265, 4, 0, 393266, 4, 0, 393267, 4, 0, 393268, 4, 0, 393269, 4, 0, 393270, 4, 0, 393271, 4, 0, 393272, 4, 0, 393273, 4, 0, 393274, 4, 0, 393275, 4, 0, 393276, 4, 0, 393277, 4, 0, 393278, 4, 0, 393279, 4, 0, 393280, 4, 0, 393281, 4, 0, 393282, 4, 0, 393283, 4, 0, 393284, 4, 0, 393285, 4, 0, 393286, 4, 0, 393287, 4, 0, 393288, 4, 0, 393289, 4, 0, 393290, 4, 0, 393291, 4, 0, 393292, 4, 0, 393293, 4, 0, 393294, 4, 0, 393295, 4, 0, 393296, 4, 0, 393297, 4, 0, 393298, 4, 0, 393299, 4, 0, 393300, 4, 0, 393301, 4, 0, 393302, 4, 0, 393303, 4, 0, 393304, 4, 0, 393305, 4, 0, 393306, 4, 0, 393307, 4, 0, 393308, 4, 0, 393309, 4, 0, 393310, 4, 0, 393311, 4, 0, 393312, 4, 0 )

[node name="SpawnEarth" parent="." instance=ExtResource( 2 )]
position = Vector2( 1295.22, 60.7015 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpawnEarth"]
position = Vector2( 0, -306.864 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 8 )
animation = "tierraApagado"
playing = true

[node name="SpawnWater" parent="." instance=ExtResource( 2 )]
position = Vector2( 3768.59, 57.3486 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpawnWater"]
position = Vector2( 24.0007, -64.0002 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 13 )
animation = "aguaApagado"
playing = true

[node name="SpawnFire" parent="." instance=ExtResource( 2 )]
position = Vector2( 4619.89, 64.8037 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpawnFire"]
position = Vector2( 23.9998, -72 )
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 22 )
animation = "fuegoApagado"
frame = 1
playing = true

[node name="SpawnAir" parent="." instance=ExtResource( 2 )]
position = Vector2( 5441.05, 61.477 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpawnAir"]
position = Vector2( -0.000518799, -48 )
frames = SubResource( 35 )
animation = "aireApagado"
frame = 4
playing = true

[node name="Tutorial" type="Node2D" parent="."]

[node name="Tutorial1" type="Area2D" parent="Tutorial"]
pause_mode = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Tutorial1"]
position = Vector2( -294.085, 72.9601 )
shape = SubResource( 36 )

[node name="DialogBox" type="CanvasLayer" parent="Tutorial/Tutorial1"]
pause_mode = 2

[node name="Label" type="RichTextLabel" parent="Tutorial/Tutorial1/DialogBox"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 97.0
margin_top = 43.0
margin_right = -96.0
margin_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.0862745, 0.0588235, 0.137255, 1 )
bbcode_enabled = true
bbcode_text = "Como ya sabes Noom, han destruido a tu madre Luna y le han arrebatado sus poderes.

Encuéntralos repartidos por el mundo, y cada uno de ellos te dará una habilidad especial para que puedas continuar la búsqueda de quien se haya llevado las fuentes de poder."
visible_characters = 0
percent_visible = 0.0
text = "Como ya sabes Noom, han destruido a tu madre Luna y le han arrebatado sus poderes.

Encuéntralos repartidos por el mundo, y cada uno de ellos te dará una habilidad especial para que puedas continuar la búsqueda de quien se haya llevado las fuentes de poder."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="TextureButton" parent="Tutorial/Tutorial1/DialogBox"]
pause_mode = 2
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -144.0
margin_right = -136.0
margin_bottom = -72.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Tutorial/Tutorial1/DialogBox"]

[node name="Tutorial2" type="Area2D" parent="Tutorial"]
pause_mode = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Tutorial2"]
position = Vector2( 793.214, 70.0312 )
shape = SubResource( 36 )

[node name="DialogBox" type="CanvasLayer" parent="Tutorial/Tutorial2"]
pause_mode = 2

[node name="Label" type="RichTextLabel" parent="Tutorial/Tutorial2/DialogBox"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 97.0
margin_top = 43.0
margin_right = -96.0
margin_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.0862745, 0.0588235, 0.137255, 1 )
bbcode_enabled = true
bbcode_text = "
[center]Mira la piedra incrustada en ese árbol...

Acércate para ver que es[/center]"
visible_characters = 0
percent_visible = 0.0
text = "
Mira la piedra incrustada en ese árbol...

Acércate para ver que es"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="TextureButton" parent="Tutorial/Tutorial2/DialogBox"]
pause_mode = 2
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -144.0
margin_right = -136.0
margin_bottom = -72.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Tutorial/Tutorial2/DialogBox"]

[node name="Intro" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Label" type="RichTextLabel" parent="Intro"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.0862745, 0.0588235, 0.137255, 1 )
bbcode_enabled = true
bbcode_text = "
[center]WELCOME TO THE
EARTH, NOOM[/center]"
visible_characters = 0
percent_visible = 0.0
text = "
WELCOME TO THE
EARTH, NOOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="TextureButton" parent="Intro"]
pause_mode = 2
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -144.0
margin_right = -136.0
margin_bottom = -72.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Intro"]

[node name="Fade" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 111

[node name="FadeEffect" parent="Fade" instance=ExtResource( 28 )]

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( -560.411, 0 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 29 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
autoplay = true
[connection signal="body_exited" from="Rebotes/Rebote1" to="Rebotes/Rebote1" method="_on_Rebote1_body_exited"]
[connection signal="body_entered" from="Tutorial/Tutorial1" to="Tutorial/Tutorial1" method="_on_Tutorial_body_entered"]
[connection signal="pressed" from="Tutorial/Tutorial1/DialogBox/Accept" to="Tutorial/Tutorial1" method="_on_Accept_pressed"]
[connection signal="body_entered" from="Tutorial/Tutorial2" to="Tutorial/Tutorial2" method="_on_Tutorial_body_entered"]
[connection signal="pressed" from="Tutorial/Tutorial2/DialogBox/Accept" to="Tutorial/Tutorial2" method="_on_Accept_pressed"]
[connection signal="pressed" from="Intro/Accept" to="." method="_on_Accept_pressed"]
